# segway

./: CMakeLists.txt  README.md  package.xml
print_topics/: CMakeLists.txt  package.xml
print_topics/src/: print_balanced_node.cpp
quimesis_segway_description/: CMakeLists.txt  package.xml
quimesis_segway_description/config/: segway_params.yaml  transfer_function.yaml
quimesis_segway_description/launch/: plot_bagfile.launch  segway.launch  segway_gazebo.launch
quimesis_segway_description/urdf/: segway.gazebo  segway.old.xacro  segway.xacro
quimesis_segway_feedback_controller/: CMakeLists.txt  package.xml
quimesis_segway_feedback_controller/include/quimesis_segway_feedback_controller/: segway_state_feedback_controller.h
quimesis_segway_feedback_controller/launch/: state_feedback.launch  state_feedback_hardware.launch
quimesis_segway_feedback_controller/params/: feedback.test.50Hz.yaml  feedback.yaml
quimesis_segway_feedback_controller/src/: lqi_control.cpp  main_hardware.cpp
quimesis_segway_joystick/: CMakeLists.txt  package.xml
quimesis_segway_joystick/launch/: segway_joy.launch
quimesis_segway_joystick/src/: segway_joy.cpp
quimesis_segway_pipe_pid/: CMakeLists.txt  package.xml
quimesis_segway_pipe_pid/launch/: imu2state.launch
quimesis_segway_pipe_pid/src/: imu2state.cpp
rtimulib_ros/: CMakeLists.txt
rtimulib_ros/config/: RTIMULib.ini
rtimulib_ros/launch/: rtimulib_ros.launch
rtimulib_ros/src/: rtimulib_ros.cpp
segway_control/: CMakeLists.txt  package.xml
segway_control/config/: segway_control.yaml
segway_control/launch/: segway_control.launch
